added auctions list endpoint
